2007-12-12  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Don't use dynamic scaling to render
	the axes - cylinders were reduced to lines before.

2007-12-11  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.*: Added a dynamic scaling variable to the
	class and a setter. This turns dynamic scaling on (default) and off.

	* avogadro/src/CMakeLists.txt, libavogadro/src/CMakeLists.txt,
	+i18n/avogadro_en_GB.ts: Added a British English translation.

2007-12-11  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/primitive.h: New primitive types defined for
	"future expansion."

	* avogadro/src/extensions/gamessinputdialog.ui: Fix typos
	mentioned by Benoit.

	* avogadro/src/extensions/propmodel.cpp,
	avogadro/src/extensions/propextension.cpp: Minor fixes to get
	compilation working again.

2007-12-11  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/autoopttool.[h,cpp]: Added "Ignored atoms are
	movable" and "Fixed atoms are movable". Small changes to ::redo() and
	::undo(), undo still seems to work. I had to change it to makje sure
	the passed molecule pointer would not point to a molecule that would
	be deleted. This caused the constraints in the model to be lossed.
	(note: OB does not support angle and torsion constraints yet, ignoring
	atoms only works for MMFF94 at the moment.)

	* avogadro/src/extentions/constraintsmodel.[h,cpp]: now connects to
	primitiveRemoved signal from a Molecule to delete invalid constraints
	as you remove atoms.

	* avogadro/src/extentions/constraintsdialog.[h,cpp]: You can now only
	add valid constraints.

	* avogadro/src/extentions/forcefieldextension.cpp: Added "Ignore
	selected atoms" and "Fix selected atoms" + changes to make sure
	constraints are consistent for both the forcefield extension and the
	AutoOpt tool. Undo doesn't work for conformersearch yet, I'll probably
	fix this by moving the ConformerSearchDialog to the ForceFieldCommand
	itself.
